Implement new architecture

--- a/Example/ios/Podfile
+++ b/Example/ios/Podfile
@@ -30,6 +30,7 @@ target "Example" do
 
   # Flags change depending on the env values.
   flags = get_default_flags()
+  flags[:fabric_enabled] = true
 
   use_react_native!(
     :path => config[:reactNativePath],
