--- a/Example/package.json
+++ b/Example/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.72.7",
     "react-native-blob-util": "^0.19.4",
     "react-native-fs": "2.18.0",
-    "react-native-image-editor": "../"
+    "react-native-image-editor": "../",
+    "rtn-calculator": "../RTNCalculator"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
